--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Projects map</title>
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
    </head>
 <body>
-<h1>Project structure!</h1>
+<div id="map">A map will appear here</div>
 <script src="js/bundle.js"></script>
 </body>
 </html>
