--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,8 @@
     <title>Projects map</title>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./js/map/markerCluster/MarkerCluster.css" />
+    <link rel="stylesheet" href="./js/map/markerCluster/MarkerCluster.Default.css" />
     <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
    </head>
 <body>
