--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>Projects map</title>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
-    <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./js/map/markerCluster/MarkerCluster.css" />
     <link rel="stylesheet" href="./js/map/markerCluster/MarkerCluster.Default.css" />
+    <link rel="stylesheet" href="./style.css" />
     <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
    </head>
 <body>
-<div id="map">A map will appear here</div>
+<div id="map">A map will be displayed here shortly...</div>
 <script src="js/bundle.js"></script>
 </body>
 </html>
