--- a/views/style.css
+++ b/views/style.css
@@ -1,13 +1,9 @@
-#map {
-    height:100%;
-    width: 100%;
-    position: fixed;
-}
+
 .info {
     padding: 6px 8px;
     font: 14px/16px Arial, Helvetica, sans-serif;
     background: white;
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    /*box-shadow: 0 0 15px rgba(0,0,0,0.2);*/
     border-radius: 5px;
 }
 .info h4 {
@@ -25,4 +21,15 @@
     margin-right: 8px;
     opacity: 0.7;
 
+}
+.leaflet-top, .leaflet-bottom{
+    position:fixed;
+}
+.leaflet-container{
+    overflow: visible;
+}
+#map {
+    height:100%;
+    width: 100%;
+    position:fixed;
 }
